Prevent unwanted footer text wrapping

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ footer p {
   margin: 0;
 }
 
+footer p span {
+  white-space: nowrap;
+}
+
 footer a {
   white-space: nowrap;
 }
